minor layout issues fixed

--- a/desafio-senior/src/Shared/breadcrumbs/breadcrumbs.component.scss
+++ b/desafio-senior/src/Shared/breadcrumbs/breadcrumbs.component.scss
@@ -1,6 +1,7 @@
 .breadcrumbs-container {
     display: flex;
     flex-wrap: wrap;
+    align-items: center
 }
 
 .breadcrumb-item {
